Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71024

Compiler warning with qqmlprivate.h in 5.12.0 Beta 1

    XMLWordPrintable

Details

    • Windows
    • acd0882f818bf05677e3e117dbd4975674d9578b

    Description

      I get the following compile warning with qqmlprivate.h now when I'm using MSVC 2017 64-bit kit.

      C:\qt\Qt5.12.0_Beta1\5.12.0\msvc2017_64\include\QtQml\qqmlprivate.h:115: warning: C4291: 'void *operator new(::size_t,void *) throw()': no matching operator delete found; memory will not be freed if initialization throws an exception

      On this line:

      template<typename T>
      void createInto(void *memory)

      { new (memory) QQmlElement<T>; }

      And it gets invoked when I call "qmlRegisterType<T>(...);" in my code.

      Not a major problem, but I wasn't getting this before with previous versions of Qt - not even 5.11.2.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              forderud Fredrik Orderud
              pekarjal Pekka Karjalainen
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes